FIX - Fixed z-index of Google Autocomplete

--- a/static/scss/PUB/_Component_gmap.scss
+++ b/static/scss/PUB/_Component_gmap.scss
@@ -90,7 +90,6 @@
     margin-top: -1px;
     margin-left: 1px;
     border-top: 0;
-    z-index: 0;
 
     .pac-item {
         padding: 6px 4px;
